--- a/MiniProject/views/index.ejs
+++ b/MiniProject/views/index.ejs
@@ -11,7 +11,11 @@
 
 <body>
     <div class="w-full min-h-screen bg-zinc-900 text-white p-10">
-        <h3 class="text-3xl mb-5">Create Account</h3>
+        <div class="flex">
+           <h3 class="text-3xl mb-5">Create Account</h3>
+           <a class="bg-blue-500 mb-5 ml-10 rounded-md outline-none px-3 py-2" href="/login">Login</a>
+        </div>
+
         <form action="/register" method="post">
             <input class="px-3 py-2 outline-none bg-transparent rounded-md border-2 border-zinc-800" type="text" placeholder="name" name="name">
             <input class="px-3 py-2 outline-none bg-transparent rounded-md border-2 border-zinc-800" type="text" placeholder="username" name="username">
