--- a/MiniProject/views/profile.ejs
+++ b/MiniProject/views/profile.ejs
@@ -14,9 +14,14 @@
         <div class="w-full flex justify-end">
             <a class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/logout">Logout</a>
         </div>
-        <h3 class="text-3xl mb-5"><span class="font-light ">Hello</span>, <%= user.name %>
-        </h3>
-        <h5 class="mb-5">You Can Create a New post</h5>
+        <div class="flex items-start gap-3">
+            <div class="w-10 h-10 rounded-md overflow-hidden">
+                <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profilepic%>" alt="">
+            </div>
+            <h3 class="text-3xl mb-5"><span class="font-light ">Hello</span>, <%= user.name %>
+            </h3>
+        </div>
+        <h5 class="mb-5 mt-3">You Can Create a New post</h5>
         <form action="/post" method="post">
             <textarea placeholder="what's on your mind?"
                 class=" p-3 w-1/3 outline-none resize-none bg-transparent border-2 border-zinc-800 rounded-md"
@@ -29,18 +34,24 @@
             <div class="postcontainer mt-5">
                 <% user.posts.reverse().forEach(function(post){ %>
                     <div class="post w-1/3 mb-4 p-4 bg-zinc-800 rounded-md border-[1px] border-zinc-700">
-                        <h4 class="text-blue-500 mb-2">@<%= user.username %></h4>
-                        <p class="text-sm tracking-tight"><%= post.content%></p>
-                        <small class="mt-2 inline-block"><%= post.likes.length %> likes</small>
+                        <h4 class="text-blue-500 mb-2">@<%= user.username %>
+                        </h4>
+                        <p class="text-sm tracking-tight">
+                            <%= post.content%>
+                        </p>
+                        <small class="mt-2 inline-block">
+                            <%= post.likes.length %> likes
+                        </small>
                         <div class="btns flex gap-4 mt-1">
                             <a class="text-blue-500" href="/like/<%= post._id %>">
-                                <%= post.likes.indexOf(user._id) === -1 ? "Like":"Unlike" %></a>
+                                <%= post.likes.indexOf(user._id)===-1 ? "Like" :"Unlike" %>
+                            </a>
                             <a class="text-zinc-500" href="/edit/<%= post._id %>">Edit</a>
                             <a class="text-red-500" href="/delete/<%= post._id %>">Delete</a>
                         </div>
                     </div>
 
-                <% })%>
+                    <% })%>
             </div>
         </div>
     </div>
